# rplexfmtr

./: .gitignore  Cargo.toml  README.md
README/: README.md
debpkgs/rplexfmtr_1.0.5_amd64/DEBIAN/: control
debpkgs/rplexfmtr_1.0.6_amd64/DEBIAN/: control
src/: database.rs  files.rs  main.rs  validate.rs
