[package]
name = "rplexfmtr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
clearscreen = "2.0.1"
colored = "2.0.0"
dirs = "5.0.1"
fs_extra = "1.3.0"
lazy_static = "1.4.0"
natord = "1.0.9"
regex = "1.8.4"
shellexpand = "3.1.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tabled = { version = "0.12.2", features = ["color"] }
text_io = "0.1.12"
tokio = { version = "1.20.0", features = ["macros"]}
