[package]
name = "rplexfmtr"
version = "1.0.4"
edition = "2021"
authors = ["nikolaizombie1 <fabio.matos999@gmail.com>"]
license = "GPL-3.0-only"
description = "A command line tool to batch rename media files for Plex® Media Server TV Show."
readme = "README.md"
homepage = "https://github.com/nikolaizombie1/rplexfmtr"
repository = "https://github.com/nikolaizombie1/rplexfmtr"
keywords = ["cli","rename","batch","Plex"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
clearscreen = "2.0.1"
colored = "2.0.0"
natord = "1.0.9"
once_cell = "1.18.0"
regex = "1.8.4"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tabled = { version = "0.12.2", features = ["color"] }
tokio = { version = "1.20.0", features = ["macros"]}
